[package]
name = "ads1115-influx-exporter"
version = "0.1.0"
authors = ["CaffeeLake <PascalCoffeeLake@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.2.2"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
chrono = "0.4.38"
embedded-hal = "0.2.7"
futures = "0.3.30"
influxdb = { version = "0.7.2", features = ["derive"] }
linux-embedded-hal = "0.3.2"
