[package]
authors = ["CaffeeLake <PascalCoffeeLake@gmail.com>"]
edition = "2024"
name = "ads1115-influx-exporter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.3.0"
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
chrono = "0.4.41"
influxdb = { version = "0.8.0", features = ["derive"] }
linux-embedded-hal = "0.4.0"
